# SDL-OpenGL-Pong

./: .gitmodules  CMakeLists.txt  README.md
game/: CMakeLists.txt
game/include/: audio.hpp  game.hpp  gl_util.h  input.hpp  render.hpp  window.hpp
game/src/: audio.cpp  game.cpp  input.cpp  main.cpp  render.cpp
windows_scripts/: build.bat  cmake.bat  run.bat  vs.bat
