cmake_minimum_required(VERSION 3.2 FATAL_ERROR)
set (CMAKE_CXX_STANDARD 17)
set (CMAKE_CXX_STANDARD_REQUIRED on)
project("recursive-pong" VERSION 1 LANGUAGES C CXX)

set(BUILD_ROOT_DIR ${CMAKE_CURRENT_BINARY_DIR})
if (${CMAKE_GENERATOR} STREQUAL "Ninja")
    set(BINARY_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/bin/)
elseif(NOT ${CMAKE_GENERATOR} MATCHES "Visual Studio")
    set(BINARY_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/bin/${CMAKE_GENERATOR}/${CMAKE_GENERATOR_PLATFORM})
else()
    set(BINARY_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/bin/${CMAKE_GENERATOR}/${CMAKE_BUILD_TYPE}/${CMAKE_GENERATOR_PLATFORM})
endif()

set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${BINARY_OUTPUT_DIRECTORY}/lib)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${BINARY_OUTPUT_DIRECTORY}/lib)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${BINARY_OUTPUT_DIRECTORY})

if (MSVC)
    add_definitions(-D_SILENCE_CXX17_CODECVT_HEADER_DEPRECATION_WARNING)
    add_compile_options("/MP")
endif()

add_subdirectory(3rdParty EXCLUDE_FROM_ALL)
add_subdirectory(game)